--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Petshop">
         <activity
-            android:name=".MainActivity"
+            android:name=".views.SignInActivity"
+            android:exported="true" />
+        <activity
+            android:name=".views.CreateAccountActivity"
+            android:exported="true" />
+        <activity
+            android:name=".views.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
