auth firebase successful !!!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Petshop">
+
+<!-- Laucher -->
         <activity
             android:name=".views.SignInActivity"
-            android:exported="true" />
-        <activity
-            android:name=".views.CreateAccountActivity"
-            android:exported="true" />
-        <activity
-            android:name=".views.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!---->
+        <activity
+            android:name=".views.HomeActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".views.CreateAccountActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
