--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
 <!-- Laucher -->
         <activity
-            android:name=".views.SignInActivity"
+            android:name=".views.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,13 +21,13 @@
             </intent-filter>
         </activity>
 <!---->
-        <activity
-            android:name=".views.HomeActivity"
-            android:exported="true" />
+<!--        <activity-->
+<!--            android:name=".views.HomeActivity"-->
+<!--            android:exported="true" />-->
 
-        <activity
-            android:name=".views.CreateAccountActivity"
-            android:exported="true" />
+<!--        <activity-->
+<!--            android:name=".views.CreateAccountActivity"-->
+<!--            android:exported="true" />-->
 
     </application>
 
