--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Petshop">
 
-<!-- Laucher -->
+<!-- Launcher -->
         <activity
             android:name=".views.HomeActivity"
             android:exported="true">
@@ -19,6 +19,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".views.ProductDetailsActivity"
+            android:exported="true">
         </activity>
 <!---->
 <!--        <activity-->
