Check if user has profile, if not then open ProfileEditActivity to update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
         <activity
             android:name=".views.CreateAccountActivity"
             android:exported="true"/>
+        <activity
+            android:name=".views.ProfileEditActivity"
+            android:exported="true"/>
     </application>
 
 </manifest>
