chỉnh lại model thêm banermodel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ android {
     buildFeatures {
         mlModelBinding true
     }
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
